--- a/utils/v4l2-ctl/v4l2-ctl.1.in
+++ b/utils/v4l2-ctl/v4l2-ctl.1.in
@@ -11,6 +11,11 @@ devices covering the full V4L2 API.
 
 .SH OPTIONS
 .TP
+\fB-A\fR, \fB--list-devices\fR
+List all v4l devices. If \fB-z\fR was given, then list just the
+devices of the media device with the bus info string as
+specified by the \fB-z\fR option.
+.TP
 \fB\-d\fR, \fB\-\-device\fR \fI<dev>\fR
 Use device \fI<dev>\fR as the V4L2 device.
 if \fI<dev>\fR starts with a digit, then /dev/video\fI<dev>\fR is used
@@ -127,10 +132,13 @@ Display all controls and their menus [VIDIOC_QUERYMENU].
 The subset of the N-dimensional array to get/set for control \fI<ctrl>\fR,
 for every dimension an (\fI<offset>\fR, \fI<size>\fR) tuple is given.
 .TP
-\fB--list-devices\fR
-List all v4l devices. If \fB-z\fR was given, then list just the
-devices of the media device with the bus info string as
-specified by the \fB-z\fR option.
+\fB--list-devices-input\fR \fI<name>\fR
+Same as \fB--list-devices\fR, but only show devices with a current
+input name that matches \fI<name>\fR.
+.TP
+\fB--list-devices-output\fR \fI<name>\fR
+Same as \fB--list-devices\fR, but only show devices with a current
+output name that matches \fI<name>\fR.
 .TP
 \fB--log-status\fR
 Log the board status in the kernel log [VIDIOC_LOG_STATUS].
