v4l-utils: Ignore comma in bracket when getting subopt
v4l_getsubopt() ignore comma in bracket, then we can set
rect value in the format of (x,y)/WxH.

Add macro GETSUBOPT_IGNORE_COMMA_IN_BRACKET to enable
or disable this feature.

Signed-off-by: Ming Qian <ming.qian@oss.nxp.com>
Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,7 @@ common_arguments = [
     '-D_GNU_SOURCE',
     '-DPROMOTED_MODE_T=int',
     '-DENABLE_NLS',
+    '-DGETSUBOPT_IGNORE_COMMA_IN_BRACKET',
     '-include', meson.current_build_dir() / 'config.h',
 ]
 
