cec-ctl: add --physical-address (-x) option
This option reports the physical address. Useful for scripts.

Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/utils/cec-ctl/cec-ctl.1.in
+++ b/utils/cec-ctl/cec-ctl.1.in
@@ -101,6 +101,10 @@ Use this OSD name. The maximum length is 14 characters.
 \fB\-V\fR, \fB\-\-vendor\-id\fR \fI<id>\fR
 Use this vendor ID. The vendor ID is a number from 0x0 to 0xffffff.
 .TP
+\fB\-x\fR, \fB\-\-physical\-address\fR
+Show the physical address. If invalid, the physical address will be reported
+as f.f.f.f. Useful for scripts, e.g.: la=`cec-ctl -s -x`
+.TP
 \fB\-l\fR, \fB\-\-logical\-address\fR
 Show first configured logical address or nothing if the device is unconfigured.
 Useful for scripts, e.g.: la=`cec-ctl -s -l`
