meson: remove two pre-0.60 workarounds
Now as the meson required version is bumped to 0.60 it is time to remove
two pre-0.60 workarounds:

- use meson.project_source_root() instead of meson.current_source_dir() as
  suggested in comment for meson >= 0.56

- use install_emptydir instead of install_subdir as suggested in comment for
  meson >= 0.60, fixes the following warnings:

  utils/keytable/meson.build:89: WARNING: Project targets '>= 0.60' but uses feature deprecated since '0.60.0': install_subdir with empty directory. It worked by accident and is buggy. Use install_emptydir instead.
  WARNING: Deprecated features used:
   * 0.60.0: {'install_subdir with empty directory'}

Signed-off-by: Peter Seiderer <ps.report@gmx.net>
Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/utils/keytable/meson.build
+++ b/utils/keytable/meson.build
@@ -82,9 +82,4 @@ endif
 endif
 endif
 
-# Install non-existing directory to create empty directory structure
-# See: https://github.com/mesonbuild/meson/issues/2904
-# This should be replaced with install_emptydir() when bumping the minimum meson
-# version to 0.60.0.
-install_subdir('protocols',
-               install_dir : ir_keytable_user_dir)
+install_emptydir(ir_keytable_user_dir / 'protocols')
