--- a/utils/cec-ctl/cec-ctl.1.in
+++ b/utils/cec-ctl/cec-ctl.1.in
@@ -278,9 +278,9 @@ via the \fB\-\-analyze\-pin\fR option. Use \- to write to stdout instead of to a
 Read and analyze the CEC pin events from the given file. Use \- to read from stdin
 instead of from a file.
 .TP
-\fB\-\-test\-reliability\fR \fI<count>\fR
+\fB\-\-test\-reliability\fR \fI<secs>\fR
 This option tests the CEC reliability by transmitting <Give Physical Addr> up to
-\fI<count>\fR times (or forever if \fI<count>\fR is 0) and check if the reply is
+\fI<secs>\fR seconds (or forever if \fI<secs>\fR is 0) and check if the reply is
 always the same. Since the reply is a broadcast message, it is in practice never
 Nacked and so any bit errors due to poor CEC signal quality will clearly show up.
 The message will be sent to the logical address specified by \fB\-\-to\fR.
