edid-decode: use override_find_program() to ease subproject use
The following will work when edid-decode is used as a subproject:

    subproject('edid-decode')
    edid_decode = find_program('edid-decode')

This got lost in the v4l-utils migration.

Signed-off-by: Simon Ser <contact@emersion.fr>
Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/utils/edid-decode/meson.build
+++ b/utils/edid-decode/meson.build
@@ -25,4 +25,6 @@ edid_decode = executable(
 	install: true,
 )
 
+meson.override_find_program('edid-decode', edid_decode)
+
 man_pages += [[ meson.current_source_dir(), 'edid-decode', 1 ]]
