qvidcap: update the man page
Update the man page. In the usage message move the two new options
to the 'file' specific section.

Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/utils/qvidcap/qvidcap.1.in
+++ b/utils/qvidcap/qvidcap.1.in
@@ -30,7 +30,7 @@ Stop after <cnt> captured frames
 Request <bufs> buffers (default 4) when streaming from a video device.
 .TP
 \fB\-s\fR, \fB\-\-single\-step\fR\fI[=<frm>]\fR
-Starting with frame <frm> (default 1), pause after displaying each frame
+Starting with frame <frm> (default 0), pause after displaying each frame
 until Space is pressed.
 .TP
 \fB\-C\fR, \fB\-\-colorspace\fR=\fI<c>\fR
@@ -86,10 +86,16 @@ set additional horizontal padding (after width)
 \fB--fps\fR=\fI<fps>\fR
 Set frames-per-second (default is 30)
 .TP
-The following option is only valid when reading from a file:
+The following options are only valid when reading from a file:
 .TP
 \fB\-F\fR, \fB-\-field\fR=\fI<f>\fR
 Override field setting. <f> can be one of the following field layouts: any, none, top, bottom, interlaced, seq_tb, seq_bt, alternate, interlaced_tb, interlaced_bt
+.TP
+\fB\-\-no\-loop\fR
+Stop at the end of the file, don't loop back to the beginning.
+.TP
+\fB\-\-from\-frame\fR=\fI<frame>\fR
+Start playing back the file at the given frame number (the first frame is frame 0).
 .TP
 The following options are specific to the test pattern generator:
 .TP
