v4l-utils: sync with latest media-committers git repo
This adds support for V4L2_CTRL_TYPE_RECT and V4L2_CTRL_WHICH_MIN/MAX_VAL.

Also add the newly generated siemens_gigaset_rc20.toml rc-keymap.

Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/utils/keytable/rc_keymaps/meson.build
+++ b/utils/keytable/rc_keymaps/meson.build
@@ -119,6 +119,7 @@ ir_keytable_rc_keymaps = files(
     'real_audio_220_32_keys.toml',
     'reddo.toml',
     'samsung_ak59_00125a.toml',
+    'siemens_gigaset_rc20.toml',
     'snapstream_firefly.toml',
     'streamzap.toml',
     'su3000.toml',
