--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -134,6 +134,7 @@
 *	rc-rc6-mce               rc6_mce.toml
 *	rc-real-audio-220-32-keys real_audio_220_32_keys.toml
 *	rc-reddo                 reddo.toml
+*	rc-siemens-gigaset-rc20  siemens_gigaset_rc20.toml
 *	rc-snapstream-firefly    snapstream_firefly.toml
 *	rc-streamzap             streamzap.toml
 *	rc-su3000                su3000.toml
