meson.build: add -Wno-psabi to suppress arm ABI warning
Suppress gcc arm ABI incompatibility warnings:

In file included from /usr/include/c++/14/map:62,
                 from ../utils/v4l2-ctl/v4l2-ctl-common.cpp:5:
/usr/include/c++/14/bits/stl_tree.h: In function ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_emplace_hint_unique(const_iterator, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const long long unsigned int&>, std::tuple<>}; _Key = long long unsigned int; _Val = std::pair<const long long unsigned int, std::__cxx11::basic_string<char> >; _KeyOfValue = std::_Select1st<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > >; _Compare = std::less<long long unsigned int>; _Alloc = std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > >]’:
/usr/include/c++/14/bits/stl_tree.h:2456:7: note: parameter passing for argument of type ‘std::_Rb_tree<long long unsigned int, std::pair<const long long unsigned int, std::__cxx11::basic_string<char> >, std::_Select1st<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > >, std::less<long long unsigned int>, std::allocator<std::pair<const long long unsigned int, std::__cxx11::basic_string<char> > > >::const_iterator’ changed in GCC 7.1

Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/meson.build
+++ b/meson.build
@@ -42,6 +42,7 @@ conf.set('PATCH', as_patch_version)
 
 common_arguments = [
     '-Wpointer-arith',
+    '-Wno-psabi',
     '-D_GNU_SOURCE',
     '-DPROMOTED_MODE_T=int',
     '-DENABLE_NLS',
