meson.build: fix location of gconv library
When compiling on a 32-bit i386 debian OS you get this compile error:

[321/332] Linking target contrib/gconv/ARIB-STD-B24.so
FAILED: contrib/gconv/ARIB-STD-B24.so
cc  -o contrib/gconv/ARIB-STD-B24.so contrib/gconv/ARIB-STD-B24.so.p/arib-std-b24.c.o -Wl,--as-needed -Wl,--allow-shlib-undefined -shared -fPIC -Wl,-rpath,/lib64/gconv -Wl,-rpath-link,/lib64/gconv -Wl,--start-group /lib64/gconv/libJIS.so /lib64/gconv/libJISX0213.so -Wl,--end-group
/usr/bin/ld: /lib64/gconv/libJIS.so: error adding symbols: file in wrong format
collect2: error: ld returned 1 exit status

The reason is that on such a system there are 64 bit libraries installed
as well (possibly because of a gcc multilib installation).

Check if we are compiling on the 32 bit environment and exclude the
lib64 locations from the gconv_dirs_generic list.

Signed-off-by: Hans Verkuil <hverkuil@xs4all.nl>

--- a/meson.build
+++ b/meson.build
@@ -215,14 +215,22 @@ have_gconv = cc.has_header('gconv.h', required : get_option('gconv'))
 gconvsysdir = get_option('gconvsysdir')
 
 # Generic check: works with most distributions
-gconv_dirs_generic = [
-    'lib64',
-    'usr/lib64',
-    'lib',
-    'usr/lib',
-    'usr/local/lib64',
-    'usr/local/lib',
-]
+if cc.sizeof('long') == 8
+    gconv_dirs_generic = [
+        'lib64',
+        'usr/lib64',
+        'lib',
+        'usr/lib',
+        'usr/local/lib64',
+        'usr/local/lib',
+    ]
+else
+    gconv_dirs_generic = [
+        'lib',
+        'usr/lib',
+        'usr/local/lib',
+    ]
+endif
 
 if gconvsysdir == ''
     foreach dir : gconv_dirs_generic
