meson.build: use `localedir` for `LOCALEDIR`
Meson knows about the option `localedir`.

https://mesonbuild.com/Builtin-options.html

We should use it for locale files so they end up in the proper
package when the build outputs are split into separate packages.

Signed-off-by: Yarny <Yarny@public-files.de>
Signed-off-by: Hans Verkuil <hverkuil+cisco@kernel.org>

--- a/meson.build
+++ b/meson.build
@@ -200,7 +200,7 @@ if cc.has_function('strerrorname_np')
     conf.set('HAVE_STRERRORNAME_NP', 1)
 endif
 
-conf.set_quoted('LOCALEDIR', get_option('prefix') / get_option('datadir') / 'locale')
+conf.set_quoted('LOCALEDIR', get_option('prefix') / get_option('localedir'))
 
 # Meson 0.60 handles the iconv dependency natively. For older versions, fall
 # back to manual checks for the iconv_open function in libc, or finding an
