v4l-utils: update Hans Verkuil's email addresses
Replace hverkuil(-cisco)@xs4all.nl by hverkuil(+cisco)@kernel.org.

Signed-off-by: Hans Verkuil <hverkuil+cisco@kernel.org>

--- a/utils/qv4l2/qv4l2.1.in
+++ b/utils/qv4l2/qv4l2.1.in
@@ -59,4 +59,4 @@ Resize Capture Window to frame size
 .SH EXIT STATUS
 On success, it returns 0. Otherwise, it will return the error code.
 .SH BUGS
-Report bugs to Hans Verkuil <hverkuil@xs4all.nl>
+Report bugs to Hans Verkuil <hverkuil@kernel.org>
