Change install dir of libv4l2tracer.so
The default install dir of libv4l2tracer.so is libdir, which will
be packaged to libv4l-dev in debian or libv4l-devel in fedora by default.
While libv4l2tracer.so is different from other library files like
libv4lconvert.so in this path, it is only used by v4l2-tracer at runtime,
 and it is not a good idea to let binary file in v4l-utils depend on
libv4l development package.

Installing libv4l2tracer.so to the default libdir won't pass debian
lintian check because this library doesn't have a SONAME.

This commit will change the install dir to the same path as other
libv4l2 wrapper libraies, so libv4l2tracer.so will get packaged to
libv4l, which is the dependency of v4l-utils, and it will also make
debian lintian check pass.

Signed-off-by: Jianfeng Liu <liujianfeng1994@gmail.com>
Signed-off-by: Hans Verkuil <hverkuil+cisco@kernel.org>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -46,6 +46,8 @@ option('libv4l2subdir', type : 'string', value : 'libv4l',
        description : 'Set libv4l2 library subdir')
 option('libv4lconvertsubdir', type : 'string', value : 'libv4l',
        description : 'Set libv4lconvert library subdir')
+option('libv4l2tracersubdir', type : 'string', value : 'libv4l',
+       description : 'Set libv4l2tracer library subdir')
 option('systemdsystemunitdir', type : 'string',
        description : 'Set systemd system unit directory')
 option('udevdir', type : 'string',
