--- a/utils/v4l2-tracer/meson.build
+++ b/utils/v4l2-tracer/meson.build
@@ -24,9 +24,12 @@ libv4l2_tracer_incdir = [
     v4l2_utils_incdir,
 ]
 
+libv4l2tracerdir = get_option('prefix') / get_option('libdir') / get_option('libv4l2tracersubdir')
+
 libv4l2tracer = shared_module('v4l2tracer',
                               libv4l2tracer_sources,
                               install : true,
+                              install_dir : libv4l2tracerdir,
                               cpp_args : v4l2_wrapper_args,
                               dependencies : libv4l2tracer_deps,
                               include_directories : libv4l2_tracer_incdir)
@@ -51,7 +54,7 @@ v4l2_tracer_deps = [
 ]
 
 v4l2_tracer_cpp_args = [
-    '-DLIBTRACER_PATH="@0@"'.format(get_option('prefix') / get_option('libdir')),
+    '-DLIBTRACER_PATH="@0@"'.format(libv4l2tracerdir),
 ]
 
 if have_visibility
